Add basic implementation of Joinable object
Issue: #130
Change-Id: I715a6e57e17e8d6cd3bd6e42882268402b55761a
Reviewed-on: https://repository.kurento.com:9999/2360
Reviewed-by: Miguel París Díaz <mparisdiaz@gmail.com>
Tested-by: Miguel París Díaz <mparisdiaz@gmail.com>
Reviewed-by: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>
Tested-by: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,8 @@ plugin_LTLIBRARIES = libgstkurento.la
 # sources used to compile this plug-in
 libgstkurento_la_SOURCES = gstkurento.c \
 			sdp_utils.c sdp_utils.h \
-			gstagnosticbin.c gstagnosticbin.h
+			gstagnosticbin.c gstagnosticbin.h \
+			gstjoinable.c gstjoinable.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) -Werror
