Create base stream class
Issue: #131
Change-Id: I073fb311cceab2e8197a0c9bc90f2238b9b02a87
Reviewed-on: https://repository.kurento.com:9999/2361
Reviewed-by: Miguel París Díaz <mparisdiaz@gmail.com>
Tested-by: Miguel París Díaz <mparisdiaz@gmail.com>
Reviewed-by: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>
Tested-by: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,8 @@ plugin_LTLIBRARIES = libgstkurento.la
 libgstkurento_la_SOURCES = gstkurento.c \
 			sdp_utils.c sdp_utils.h \
 			gstagnosticbin.c gstagnosticbin.h \
-			gstjoinable.c gstjoinable.h
+			gstjoinable.c gstjoinable.h \
+			gstbasestream.c gstbasestream.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) -Werror
