Add basic BaseRtpStream object implementation
Issue: #132
Change-Id: Iec0b638c06a49b94f1eb32af252a9fd9a7e13905
Reviewed-on: https://repository.kurento.com:9999/2362
Reviewed-by: Miguel París Díaz <mparisdiaz@gmail.com>
Tested-by: Miguel París Díaz <mparisdiaz@gmail.com>
Reviewed-by: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>
Tested-by: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,8 @@ libgstkurento_la_SOURCES = gstkurento.c \
 			sdp_utils.c sdp_utils.h \
 			gstagnosticbin.c gstagnosticbin.h \
 			gstjoinable.c gstjoinable.h \
-			gstbasestream.c gstbasestream.h
+			gstbasestream.c gstbasestream.h \
+			gstbasertpstream.c gstbasertpstream.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) -Werror
