Add basic implementation of udpstream
Issue: #129
Change-Id: I81ff3011a36fc50598f6d5deb9b563ec28fa2a07
Reviewed-on: https://repository.kurento.com/gerrit/2363
Reviewed-by: Miguel París Díaz <mparisdiaz@gmail.com>
Tested-by: Miguel París Díaz <mparisdiaz@gmail.com>
Reviewed-by: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>
Tested-by: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,7 +7,8 @@ libgstkurento_la_SOURCES = gstkurento.c \
 			gstagnosticbin.c gstagnosticbin.h \
 			gstjoinable.c gstjoinable.h \
 			gstbasestream.c gstbasestream.h \
-			gstbasertpstream.c gstbasertpstream.h
+			gstbasertpstream.c gstbasertpstream.h \
+			gstudpstream.c gstudpstream.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) -Werror
