--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,17 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12</version>
+				<configuration>
+					<excludes>
+						<exclude>**/AsyncMediaServerTest.java</exclude>
+						<exclude>**/SyncMediaServerTest.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 		</plugins>
 
 		<extensions>
