--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<kms-interface.version>2.0.0-SNAPSHOT</kms-interface.version>
 		<junit.version>4.10</junit.version>
 		<slf4j.version>1.6.4</slf4j.version>
+		<spring.version>3.0.6.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
@@ -42,7 +43,6 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -52,6 +52,18 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>${slf4j.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -77,6 +89,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.12</version>
+				<!-- TODO: Enable this test when we can launch kurento medis erver inside 
+					the test -->
 				<configuration>
 					<excludes>
 						<exclude>**/AsyncMediaServerTest.java</exclude>
