Change artifactId to kmf-repository-ref-spi
Change-Id: I002e1ce44a1722691c1ee5c8d999d2fae5b4ca06

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.kurento.kmf</groupId>
-	<artifactId>kmf-media-repository-spi</artifactId>
+	<artifactId>kmf-repository-ref-spi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
