--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
 
 		<!-- Dependencies Versions -->
 		<kmf-api.version>1.0.0-SNAPSHOT</kmf-api.version>
+		<kmf-http-ep.version>0.0.1-SNAPSHOT</kmf-http-ep.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
+		<spring.version>3.1.4.RELEASE</spring.version>
 
 		<!-- Extensions Versions -->
 		<wagon-ssh.version>2.0</wagon-ssh.version>
@@ -46,14 +48,19 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.kurento.kmf</groupId>
-			<artifactId>kmf-api</artifactId>
-			<version>${kmf-api.version}</version>
+			<artifactId>kmf-http-ep</artifactId>
+			<version>${kmf-http-ep.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${servlet-api.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
 		</dependency>
 	</dependencies>
 
