--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 		<kmf-http-ep.version>0.0.1-SNAPSHOT</kmf-http-ep.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<spring.version>3.1.4.RELEASE</spring.version>
+		<reflections.version>0.9.9-RC1</reflections.version>
+		<cglib.version>2.2.2</cglib.version>
+
 
 		<!-- Extensions Versions -->
 		<wagon-ssh.version>2.0</wagon-ssh.version>
@@ -61,6 +64,16 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>${reflections.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>${cglib.version}</version>
 		</dependency>
 	</dependencies>
 
