PlayerHandler example with new lifecycle management mechanism
Change-Id: Id31960ee2ac36afdaae5fbd60687ab7c74ea6487

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,20 +4,12 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 
+	<!-- 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/applicationContext.xml</param-value>
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	<servlet>
-		<servlet-name>PlayerHandlerServlet</servlet-name>
-		<servlet-class>com.kurento.kmf.content.servlet.PlayerHandlerServlet</servlet-class>
-		<async-supported>true</async-supported>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>PlayerHandlerServlet</servlet-name>
-		<url-pattern>/test</url-pattern>
-	</servlet-mapping>
+	</listener> -->
 </web-app>
