Add wagon-ssh extension
Change-Id: Id9a7c6de1ecabc017e79327755c5647ec9db0471

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
 
 		<!-- Plugins Versions -->
 		<maven-war-plugin.version>2.3</maven-war-plugin.version>
+
+		<!-- Extensions Versions -->
+		<wagon-ssh.version>2.0</wagon-ssh.version>
 	</properties>
 
 	<dependencies>
@@ -43,6 +46,13 @@
 	</dependencies>
 
 	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>${wagon-ssh.version}</version>
+			</extension>
+		</extensions>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
