--- a/Makefile.am
+++ b/Makefile.am
@@ -1,19 +1,19 @@
 plugin_LTLIBRARIES = libgstkurento.la
 
-glib_enum_define = GST_KURENTO
-glib_gen_prefix = __gst_kurento
-glib_gen_basename = gstkurento
+glib_enum_define = KMS_PLUGINS
+glib_gen_prefix = __kms
+glib_gen_basename = kms
 
 include $(top_srcdir)/gst-glib-gen.mak
 
-built_sources = gstkurento-marshal.c
-built_headers = gstkurento-marshal.h
+built_sources = kms-marshal.c
+built_headers = kms-marshal.h
 
 BUILT_SOURCES = $(built_sources) $(built_headers)
 
 CLEANFILES = $(BUILT_SOURCES)
 
-EXTRA_DIST = gstkurento-marshal.list
+EXTRA_DIST = kms-marshal.list
 
 # sources used to compile this plug-in
 libgstkurento_la_SOURCES = gstkurento.c \
