--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ CLEANFILES = $(BUILT_SOURCES)
 EXTRA_DIST = kms-marshal.list
 
 # sources used to compile this plug-in
-libgstkurento_la_SOURCES = gstkurento.c \
+libgstkurento_la_SOURCES = kmsplugin.c \
 			$(BUILT_SOURCES) \
 			sdp_utils.c sdp_utils.h \
 			kmsagnosticbin.c kmsagnosticbin.h \
