Add KmsRecorderEndPoint basic template
Change-Id: Iee45b1b003aa13d9eb66cb58c47774c65e0379b8

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,7 +24,8 @@ libgstkurento_la_SOURCES = kmsplugin.c \
 			kmsbasesdpendpoint.c kmsbasesdpendpoint.h \
 			kmsbasertpendpoint.c kmsbasertpendpoint.h \
 			kmsrtpendpoint.c kmsrtpendpoint.h \
-			kmsautomuxerbin.c kmsautomuxerbin.h
+			kmsautomuxerbin.c kmsautomuxerbin.h \
+			kmsrecorderendpoint.c kmsrecorderendpoint.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) $(GIO_CFLAGS) $(NICE_CFLAGS) -Werror
