--- a/Makefile.am
+++ b/Makefile.am
@@ -29,7 +29,8 @@ libgstkurento_la_SOURCES = kmsplugin.c \
 			kmsbasertpendpoint.c kmsbasertpendpoint.h \
 			kmsrtpendpoint.c kmsrtpendpoint.h \
 			kmsautomuxerbin.c kmsautomuxerbin.h \
-			kmsrecorderendpoint.c kmsrecorderendpoint.h
+			kmsrecorderendpoint.c kmsrecorderendpoint.h \
+			kmsfilterelement.c kmsfilterelement.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) $(GIO_CFLAGS) $(NICE_CFLAGS) -Werror
