--- a/Makefile.am
+++ b/Makefile.am
@@ -30,7 +30,8 @@ libgstkurento_la_SOURCES = kmsplugin.c \
 			kmsrtpendpoint.c kmsrtpendpoint.h \
 			kmsautomuxerbin.c kmsautomuxerbin.h \
 			kmsrecorderendpoint.c kmsrecorderendpoint.h \
-			kmsfilterelement.c kmsfilterelement.h
+			kmsfilterelement.c kmsfilterelement.h \
+			kmsplayerendpoint.c kmsplayerendpoint.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) $(GIO_CFLAGS) $(NICE_CFLAGS) -Werror
