Add opencv dependencies and compile opencv plugins conditionaly
Change-Id: I1f5979d0b4a2abd6978b783176e2e6b84ecbf60a

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,14 +10,20 @@ BUILT_SOURCES = $(built_sources) $(built_headers)
 
 CLEANFILES = $(BUILT_SOURCES)
 
+if HAVE_OPENCV
+OPENCV_FILTERS = kmspointerdetector.c kmspointerdetector.h
+else
+OPENCV_FILTERS =
+endif
+
 # sources used to compile this plug-in
 libkmsfilters_la_SOURCES = kmsfilters.c \
 			$(BUILT_SOURCES) \
-			kmspointerdetector.c kmspointerdetector.h
+			$(OPENCV_FILTERS)
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
-libkmsfilters_la_CFLAGS = $(GST_CFLAGS) -Werror
-libkmsfilters_la_LIBADD = $(GST_LIBS)
+libkmsfilters_la_CFLAGS = $(GST_CFLAGS) $(OPENCV_CFLAGS) -Werror
+libkmsfilters_la_LIBADD = $(GST_LIBS) $(OPENCV_LIBS)
 libkmsfilters_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libkmsfilters_la_LIBTOOLFLAGS = --tag=disable-static
 
