--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<spring.version>3.1.4.RELEASE</spring.version>
 		<cglib.version>2.2.2</cglib.version>
+		<slf4j-api.version>1.7.5</slf4j-api.version>
 
 		<!-- Extensions Versions -->
 		<wagon-ssh.version>2.0</wagon-ssh.version>
@@ -60,6 +61,11 @@
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
 			<version>${cglib.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j-api.version}</version>
 		</dependency>
 	</dependencies>
 
