--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<reflections.version>0.9.9-RC1</reflections.version>
 		<httpclient.version>4.2.5</httpclient.version>
+		<gson.version>2.2.4</gson.version>
 
 		<!-- Extensions Versions -->
 		<wagon-ssh.version>2.0</wagon-ssh.version>
@@ -78,6 +79,12 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
 			<version>${httpclient.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
