webrtcendpoint: Initial skeleton
Change-Id: Ibb381ae847c9b20da32234261c4c8c6c943afac1

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,7 +37,8 @@ libgstkurento_la_SOURCES = kmsplugin.c \
 			kmsrecorderendpoint.c kmsrecorderendpoint.h \
 			kmsfilterelement.c kmsfilterelement.h \
 			kmsplayerendpoint.c kmsplayerendpoint.h \
-			kmsuriendpoint.c kmsuriendpoint.h
+			kmsuriendpoint.c kmsuriendpoint.h \
+			kmswebrtcendpoint.c kmswebrtcendpoint.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) $(GIO_CFLAGS) $(NICE_CFLAGS) -Werror
