Add initial skelleton for httpendpoint plugin
Change-Id: I64155e71eec0a13d26d86e9268ff8695789d7d62

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,7 +38,8 @@ libgstkurento_la_SOURCES = kmsplugin.c \
 			kmsfilterelement.c kmsfilterelement.h \
 			kmsplayerendpoint.c kmsplayerendpoint.h \
 			kmsuriendpoint.c kmsuriendpoint.h \
-			kmswebrtcendpoint.c kmswebrtcendpoint.h
+			kmswebrtcendpoint.c kmswebrtcendpoint.h \
+                        kmshttpendpoint.c httpendpoint.h
 
 # compiler and linker flags used to compile this plugin, set in configure.ac
 libgstkurento_la_CFLAGS = $(GST_CFLAGS) $(GIO_CFLAGS) $(NICE_CFLAGS) -Werror
