First tests with WebRTC
Change-Id: I9d09e2e14a8a46db90e3e25fa5ef30a92801e40e

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j-api.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.thetransactioncompany</groupId>
+			<artifactId>cors-filter</artifactId>
+			<version>1.7.1</version>
+		</dependency>
 
 		<!-- Test dependencies (JUnit, Arquillian) -->
 		<dependency>
