--- a/src/main/webapp/WEB-INF/kurento.properties
+++ b/src/main/webapp/WEB-INF/kurento.properties
@@ -1,1 +1,5 @@
 contentApiConfiguration.poolCoreSize=20
+mediaApiConfiguration.serverAddress=193.147.51.16
+mediaApiConfiguration.serverPort=9090
+mediaApiConfiguration.handlerAddress=193.147.51.10
+mediaApiConfiguration.handlerPort=9100
