Implemented Rtp Media service againts real media server
Change-Id: Ieafd719b46d0b41a0fa9acf5786a1af78e8b410b

Ammend to last commit due to error with git

Change-Id: I91ddf17f1d4cbc2ed02cf5d77b8fa3ae57d86ed3

--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,8 @@
 			<artifactId>kmf-media-api</artifactId>
 			<version>${kmf-media-api.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>com.kurento.kmf</groupId>
-			<artifactId>kmf-http-ep</artifactId>
-			<version>${kmf-http-ep.version}</version>
-		</dependency>
+		<!-- <dependency> <groupId>com.kurento.kmf</groupId> <artifactId>kmf-http-ep</artifactId> 
+			<version>${kmf-http-ep.version}</version> </dependency> -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
