--- a/platedetector/Makefile.am
+++ b/platedetector/Makefile.am
@@ -19,8 +19,8 @@ libplatedetector_la_SOURCES = platedetector.c \
 			$(BUILT_SOURCES) \
 			kmsplatedetector.c kmsplatedetector.h
 # compiler and linker flags used to compile this plugin, set in configure.ac
-libplatedetector_la_CFLAGS = $(GST_CFLAGS) $(OPENCV_CFLAGS) $(TESSERACT_CFLAGS)-Werror
-libplatedetector_la_LIBADD = $(GST_LIBS) $(OPENCV_LIBS) $(TESSERACT_LIBS)
+libplatedetector_la_CFLAGS = $(GST_CFLAGS) $(OPENCV_CFLAGS) -Werror
+libplatedetector_la_LIBADD = $(GST_LIBS) $(OPENCV_LIBS) -ltesseract
 libplatedetector_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libplatedetector_la_LIBTOOLFLAGS = --tag=disable-static
 
