--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
 		<!-- Dependencies Versions -->
 		<kmf-media-api.version>1.0.0-SNAPSHOT</kmf-media-api.version>
+		<kmf-content-protocol.version>0.0.1-SNAPSHOT</kmf-content-protocol.version>
 		<kmf-http-ep.version>0.0.1-SNAPSHOT</kmf-http-ep.version>
 		<kmf-spring.version>0.0.1-SNAPSHOT</kmf-spring.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
@@ -53,6 +54,11 @@
 			<groupId>com.kurento.kmf</groupId>
 			<artifactId>kmf-spring</artifactId>
 			<version>${kmf-spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.kurento.kmf</groupId>
+			<artifactId>kmf-content-protocol</artifactId>
+			<version>${kmf-content-protocol.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.kurento.kmf</groupId>
