Test against a real media server
Change-Id: Ia29d03d0a49f11e0ed58d122068004e11911a70b

--- a/src/main/webapp/WEB-INF/kurento.properties
+++ b/src/main/webapp/WEB-INF/kurento.properties
@@ -1,1 +1,5 @@
 contentApiConfiguration.poolCoreSize=20
+mediaApiConfiguration.serverAddress=193.147.51.44
+mediaApiConfiguration.serverPort=9090
+mediaApiConfiguration.handlerAddress=193.147.51.4
+mediaApiConfiguration.handlerPort=9100
