--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 		<!-- Test Dependencies Versions -->
 		<junit.version>4.8.1</junit.version>
-		<arquillian.version>1.0.3.Final</arquillian.version>
+		<arquillian.version>1.1.1.Final</arquillian.version>
 		<ApacheJMeter_core.version>2.9</ApacheJMeter_core.version>
 		<jmeter-maven-plugin.version>1.8.1</jmeter-maven-plugin.version>
 
@@ -217,7 +217,9 @@
 						<directory>src/test/resources</directory>
 						<filtering>true</filtering>
 						<includes>
+							<include>**/*.jmx</include>
 							<include>**/arquillian.xml</include>
+							<include>**/test.properties</include>
 						</includes>
 					</testResource>
 				</testResources>
