Prepare release kmf-media-api-1.0.0
Change-Id: I3e7bf37bb72fb41f774b5b96d20b3bdef0c5e3e5

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-media-api</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>kmf-media-api</name>
