--- a/Makefile.am
+++ b/Makefile.am
@@ -28,6 +28,7 @@ EXTRA_DIST = kms-marshal.list
 # sources used to compile this plug-in
 libgstkurento_la_SOURCES = kmsplugin.c \
 			$(BUILT_SOURCES) \
+			kmsutils.c kmsutils.h \
 			sdp_utils.c sdp_utils.h \
 			kmsagnosticbin.c kmsagnosticbin.h \
 			kmselement.c kmselement.h \
