First 2.0.0-SNAPSHOT commit of media-api (incomplete)
Sync and async implementation
Removed z* files from version control
Added MediaHandlerServer implementation using spring thread pool

Change-Id: Ie2d60451c68dbaada0ec8a09a39f534dc952084c

--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,13 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- Dependencies version -->
-		<kms-interface.version>2.0.0</kms-interface.version>
+		<kms-interface.version>3.0.0-SNAPSHOT</kms-interface.version>
 		<junit.version>4.10</junit.version>
 		<slf4j.version>1.6.4</slf4j.version>
 		<cglib.version>2.2.2</cglib.version>
 		<spring.version>3.1.4.RELEASE</spring.version>
+		<commons-pool.version>1.6</commons-pool.version>
+		<kmf-commons.version>0.0.1-SNAPSHOT</kmf-commons.version>
 	</properties>
 
 	<dependencies>
@@ -29,6 +31,11 @@
 			<groupId>com.kurento.kms</groupId>
 			<artifactId>kms-interface</artifactId>
 			<version>${kms-interface.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.kurento.kmf</groupId>
+			<artifactId>kmf-commons</artifactId>
+			<version>${kmf-commons.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -62,6 +69,11 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-pool</groupId>
+			<artifactId>commons-pool</artifactId>
+			<version>${commons-pool.version}</version>
 		</dependency>
 	</dependencies>
 
