Improved error reporting
Change-Id: I8200939e70b4ca56b32f873cb9410d5c7839f377

--- a/src/main/resources/kurento-error-codes.properties
+++ b/src/main/resources/kurento-error-codes.properties
@@ -57,6 +57,11 @@
 10023=Illegal argument;500;-32500
 10024=Illegal argument;500;-32500
 10025=Handler exception;500;-32500 
+10026=Lack of implementation;400;-32600
+10027=Illegal argument;500;-32500
+10028=Illegal argument;500;-32500
+10029=Illegal event type;406;-32602
+10030=Illegal argument;500;-32500
 
 
 # Internal framework errors
@@ -85,9 +90,28 @@
 20022=Error releasing media object;500;-32400
 20023=RtpEndPoint error;500;-32400
 20024=RtpEndPoint error;500;-32400
+20025=Error in StreamingProxy: thread has been interrupted;500;-32400
+20026=IOException sending HTTP Error Report;500;-32300
+20027=Received invalid null SDP from media server;503;-32600
+20028=Received invalid empty SDP from media server;503;-32600
+20029=Error starting Media Element in SDP-based session;500;-32400
+20030=Error starting HTTP Player with Content Path;500;-32400
+20031=Error starting HTTP Player with Media Element;500;-32400
+20032=IOException creating media pipeline in HTTP Player;500;-32400
+20033=Media Server Exception creating media pipeline in HTTP Player;500;-32400
+20034=IOException performing play in HTTP Player;500;-32400
+20035=IOException recovering media pipeline in HTTP Player;500;-32400
+20036=Media Server Exception recovering media pipeline in HTTP Player;500;-32400
+20037=IOException creating HttpEndPoint in HTTP Recorder;500;-32400
+20038=Media Server Exception creating HttpEndPoint in HTTP Recorder;500;-32400
+20039=Error starting HTTP Recorder with Content Path;500;-32400
+20040=Error starting HTTP Recorder with Media Elements;500;-32400
+20041=Error starting HTTP Recorder with sink Media Element;500;-32400
+20042=IOException creating media pipeline in HTTP Recorder;500;-32400
+20043=Media Server Exception creating media pipeline in HTTP Recorder;500;-32400
+
 
 #Media server error
-
 30000=Todo;500;-32400
 
 
